<resources>
    <string name="app_name">TODOList</string>

    <string name="Login_title_1">本 地 登 录</string>
    <string name="Register_title">本 地 注 册</string>
    <string name="remember_password">记住密码</string>
    <string name="log_in">登录</string>
    <string name="register">注册</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="user_name">用户名</string>
    <string name="confirm_passwd">确认密码</string>
    <string name="back_login_page">返回登录</string>
    <string name="confirm_register">确认注册</string>
    <string name="user_name_over_length_hint">你写得太多了</string>
    <string name="password_over_length_hint">@string/user_name_over_length_hint</string>
    <string name="no_account_hint">没有账号？那就去注册一个</string>
    <string name="check_passwd_hint">请记住密码并做好保密措施</string>
    <string name="input_passwd_hint">请输入正确的密码</string>
    <string name="regis_account_hint">填写合适的用户名用以注册</string>
    <string name="regis_passwd_hint">请输入合适的密码并牢记</string>
    <string name="confirm_passwd_hint">请确认你的密码</string>
    <string name="user_name_data_key">USER_NAME_KAY</string>
    <string name="account_key">ACCOUNT_KAY</string>
    <string name="password_data_key">PASSWORD_KAY</string>
    <string name="account_sharePref_name">ACCOUNT_SHP</string>
    <string name="remember_passwd_key">REMEMBER_PASSWD_KAY</string>
</resources>