<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.example.todolist.databeans.user.AccountData" />

        <variable
            name="vm"
            type="com.example.todolist.viewmodels.AccountDataViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:viewBindingIgnore="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.36" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.49" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.23" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_text_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="25dp"
            android:textColorHint="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/user_name_Max_length"
            app:counterTextColor="@color/blue_purple"
            app:errorEnabled="true"
            app:helperText="@string/no_account_hint"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/material_dynamic_neutral50"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/bg_translucent_rounded_corners_box"
                android:drawableStart="@drawable/ic_account_input_24"
                android:drawablePadding="5dp"
                android:drawableTintMode="multiply"
                android:hint="@string/account"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingVertical="15dp"
                android:text="@={user.loginAccount}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_text_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="25dp"
            android:textColorHint="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/password_Max_length"
            app:counterTextColor="@color/blue_purple"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/Theme.TODOList"
            app:helperTextTextColor="@color/material_dynamic_neutral30"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:passwordToggleDrawable="@drawable/ic_password_lock_opened_24"
            app:passwordToggleTint="#14CAAF"
            app:passwordToggleTintMode="multiply">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_translucent_rounded_corners_box"
                android:drawableStart="@drawable/ic_password_locked_24"
                android:drawablePadding="5dp"
                android:drawableTintMode="multiply"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="15dp"
                android:text="@={user.loginPasswd}"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_title_1"
            android:textColor="@color/cardview_dark_background"
            android:textColorHighlight="@color/cardview_light_background"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline9"
            app:layout_constraintVertical_bias="0.721" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_corner_btn"
            android:text="@string/register"
            android:textColor="#98980E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintVertical_bias="0.354" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_corner_btn"
            android:text="@string/log_in"
            android:textColor="#98980E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintVertical_bias="0.354" />

        <CheckBox
            android:id="@+id/remember_password"
            style="@android:style/Widget.Holo.Light.CompoundButton.CheckBox"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:button="@drawable/check_box_style"
            android:checked="@={user.isRememberPasswd}"
            android:text="@string/remember_password"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.305"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.58" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

